--- a/modules/rating/pom.xml
+++ b/modules/rating/pom.xml
@@ -1,1 +1,26 @@
-<?xml version='1.0' encoding='UTF-8'?><project xmlns='http://maven.apache.org/POM/4.0.0'><modelVersion>4.0.0</modelVersion><parent><groupId>com.isec</groupId><artifactId>motor-insurance-platform</artifactId><version>1.0.0-SNAPSHOT</version><relativePath>../../pom.xml</relativePath></parent><artifactId>rating</artifactId><name>rating</name><dependencies><dependency><groupId>com.isec</groupId><artifactId>common</artifactId></dependency><dependency><groupId>com.isec</groupId><artifactId>messaging</artifactId></dependency></dependencies></project>
+<?xml version='1.0' encoding='UTF-8'?>
+<project xmlns='http://maven.apache.org/POM/4.0.0'>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.isec</groupId>
+        <artifactId>motor-insurance-platform</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
+    </parent>
+    <artifactId>rating</artifactId>
+    <name>rating</name>
+    <dependencies>
+        <dependency>
+            <groupId>com.isec</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.isec</groupId>
+            <artifactId>messaging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.isec</groupId>
+            <artifactId>applications</artifactId>
+        </dependency>
+    </dependencies>
+</project>
