Add full name to UserProfile and update S3 bucket config

--- a/app-bootstrap/src/main/resources/application.yml
+++ b/app-bootstrap/src/main/resources/application.yml
@@ -36,8 +36,8 @@ management:
 
 aws:
   s3:
-    bucket-name: ${S3_BUCKET:isec-insurance-docs}
-    region: ${AWS_REGION:eu-west-1}
+    bucket-name: ${S3_BUCKET:isecdocuments}
+    region: ${AWS_REGION:eu-east-1}
 
 logging:
   level:
