--- a/app-bootstrap/src/main/resources/application.yml
+++ b/app-bootstrap/src/main/resources/application.yml
@@ -38,6 +38,8 @@ aws:
   s3:
     bucket-name: ${S3_BUCKET:isecdocuments}
     region: ${AWS_REGION:eu-east-1}
+  access-key: ${AWS_ACCESS_KEY}
+  secret-key: ${AWS_SECRET_KEY}
 
 logging:
   level:
