Add document management with presigned URL support and integrate S3 service into application workflows. Update database schema and configurations.

--- a/app-bootstrap/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/app-bootstrap/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -9,3 +9,5 @@ databaseChangeLog:
       file: db/changelog/modules/04-certificates.yaml
   - include:
       file: db/changelog/modules/05-audit.yaml
+  - include:
+      file: db/changelog/modules/06-documents.yaml
