--- a/app-bootstrap/src/main/resources/db/changelog/modules/05-audit.yaml
+++ b/app-bootstrap/src/main/resources/db/changelog/modules/05-audit.yaml
@@ -27,7 +27,7 @@ databaseChangeLog:
                   type: BIGINT
               - column:
                   name: detail
-                  type: TEXT
+                  type: VARCHAR(255)
               - column:
                   name: timestamp
                   type: TIMESTAMP
