Introduce anonymous quote flow with Redis integration and link to application process.
- Add support for creating and retrieving anonymous quotes via Redis for short-term storage.
- Extend `ApplicationController` to allow linking applications with anonymous quotes.
- Introduce `AnonymousQuoteRepository` and new entity `AnonymousQuote`.
- Update security configuration to allow unauthenticated access to anonymous quote endpoint.
- Enhance Postman collection and README for the new flow.
- Add new dependencies: Spring Data Redis.

--- a/modules/rating/pom.xml
+++ b/modules/rating/pom.xml
@@ -19,8 +19,8 @@
             <artifactId>messaging</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.isec</groupId>
-            <artifactId>applications</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
     </dependencies>
 </project>
