--- a/modules/applications/pom.xml
+++ b/modules/applications/pom.xml
@@ -25,5 +25,9 @@
             <groupId>com.isec</groupId>
             <artifactId>documents</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.isec</groupId>
+            <artifactId>rating</artifactId>
+        </dependency>
     </dependencies>
 </project>
