Integrate event-driven workflows and idempotency for certificates, valuation letters, and notifications:
- Add `CertificateRequestedEvent` and `ValuationLetterRequestedEvent` for asynchronous processing.
- Enhance `CertificateService` to trigger events for certificate issuance.
- Implement consumers for notifications, valuation letters, and certificates.
- Add idempotency handling and Redis-backed duplication checks.
- Update RabbitMQ configuration with DLQs for fail-safes.
- Extend repositories and entities for idempotency and tracking.
- Refactor and mock integrations (e.g., S3, DMVIC).
- Update `README` with new architecture details.

Includes tests for coverage and updates to application.yml for RabbitMQ/Redis.

--- a/modules/certificates/pom.xml
+++ b/modules/certificates/pom.xml
@@ -22,5 +22,13 @@
             <groupId>com.isec</groupId>
             <artifactId>policies</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.isec</groupId>
+            <artifactId>applications</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.isec</groupId>
+            <artifactId>integrations</artifactId>
+        </dependency>
     </dependencies>
 </project>
