--- a/app-bootstrap/src/main/resources/application.yml
+++ b/app-bootstrap/src/main/resources/application.yml
@@ -19,6 +19,14 @@ spring:
     port: ${RABBITMQ_PORT:5672}
     username: ${RABBITMQ_USER:admin}
     password: ${RABBITMQ_PASS:admin}
+    listener:
+      simple:
+        retry:
+          enabled: true
+          initial-interval: 1000ms
+          max-attempts: 3
+          max-interval: 10000ms
+          multiplier: 2.0
   data:
     redis:
       host: ${REDIS_HOST:localhost}
