--- a/modules/notifications/pom.xml
+++ b/modules/notifications/pom.xml
@@ -1,1 +1,37 @@
-<?xml version='1.0' encoding='UTF-8'?><project xmlns='http://maven.apache.org/POM/4.0.0'><modelVersion>4.0.0</modelVersion><parent><groupId>com.isec</groupId><artifactId>motor-insurance-platform</artifactId><version>1.0.0-SNAPSHOT</version><relativePath>../../pom.xml</relativePath></parent><artifactId>notifications</artifactId><name>notifications</name><dependencies><dependency><groupId>com.isec</groupId><artifactId>common</artifactId></dependency><dependency><groupId>com.isec</groupId><artifactId>messaging</artifactId></dependency></dependencies></project>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.isec</groupId>
+        <artifactId>motor-insurance-platform</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
+    </parent>
+
+    <artifactId>notifications</artifactId>
+    <name>notifications</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.isec</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.isec</groupId>
+            <artifactId>messaging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.isec</groupId>
+            <artifactId>policies</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.isec</groupId>
+            <artifactId>applications</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.isec</groupId>
+            <artifactId>documents</artifactId>
+        </dependency>
+    </dependencies>
+</project>
