Implement M-Pesa STK callback handling, policy balance updates, and certificate issuance triggers:
- Add `handleCallback` method in `PaymentService` to process M-Pesa callbacks.
- Integrate policy balance updates and certificate issuance in successful payment flow.
- Enhance `PaymentRepository` with methods for receipt validation and lookup.
- Modify database schema to support status and idempotency for certificates.
- Update Postman collection with callback examples and endpoints.
- Include tests for callback handling and payment flow.

--- a/modules/applications/pom.xml
+++ b/modules/applications/pom.xml
@@ -27,6 +27,10 @@
         </dependency>
         <dependency>
             <groupId>com.isec</groupId>
+            <artifactId>policies</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.isec</groupId>
             <artifactId>rating</artifactId>
         </dependency>
     </dependencies>
