--- a/app-bootstrap/src/main/resources/db/changelog/modules/04-certificates.yaml
+++ b/app-bootstrap/src/main/resources/db/changelog/modules/04-certificates.yaml
@@ -35,3 +35,13 @@ databaseChangeLog:
               - column:
                   name: issued_at
                   type: TIMESTAMP
+              - column:
+                  name: status
+                  type: VARCHAR(50)
+                  constraints:
+                    nullable: false
+              - column:
+                  name: idempotency_key
+                  type: VARCHAR(255)
+                  constraints:
+                    unique: true
