Introduce valuation letter and authorized valuer management capabilities
- Add repositories, services, and controllers for `ValuationLetter` and `AuthorizedValuer` entities.
- Implement `ValuationLetterService` logic for idempotent generation and S3 PDF uploads.
- Create database tables for `valuation_letters` and `authorized_valuers` with Liquibase changelogs.
- Extend the S3 service with object upload capabilities.
- Add Postman collection requests for managing valuation letters and valuers.
- Include tests for valuation letter generation and PDF creation.
- Update dependencies: Introduce `openpdf` for PDF generation.

--- a/modules/documents/pom.xml
+++ b/modules/documents/pom.xml
@@ -22,6 +22,14 @@
             <artifactId>messaging</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.isec</groupId>
+            <artifactId>policies</artifactId>
+        </dependency>
+        <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>s3</artifactId>
         </dependency>
