--- a/app-bootstrap/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/app-bootstrap/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -11,3 +11,5 @@ databaseChangeLog:
       file: db/changelog/modules/05-audit.yaml
   - include:
       file: db/changelog/modules/06-documents.yaml
+  - include:
+      file: db/changelog/modules/07-valuation-letters.yaml
