Add support for latest valuation letter retrieval, dynamic branding, and metadata updates
- Replace same-day valuation letter check with logic to retrieve the latest letter.
- Include company branding details (logo, name, address) in valuation letters.
- Modify `Policy` entity schema to include `valuation_letter_s3_key` field.
- Update Liquibase changelogs to reflect schema changes.
- Add new endpoints for fetching the latest valuation letter by policy ID or number.
- Extend Postman collection with new requests and update test cases accordingly.
- Improve PDF generation with company footer and additional valuer details.

--- a/app-bootstrap/src/main/resources/application.yml
+++ b/app-bootstrap/src/main/resources/application.yml
@@ -57,3 +57,11 @@ logging:
   level:
     com.isec.platform: INFO
     org.springframework.security: INFO
+
+branding:
+  company:
+    name: ${BRANDING_COMPANY_NAME:iSec Insurance Co. Ltd}
+    address: ${BRANDING_COMPANY_ADDRESS:P.O. Box 12345-00100, Nairobi, Kenya}
+    contacts: ${BRANDING_COMPANY_CONTACTS:+254 700 000 000 | info@example.com}
+    website: ${BRANDING_COMPANY_WEBSITE:www.example.com}
+  logo-path: ${BRANDING_LOGO_PATH:classpath:/branding/isec_logo.jpg}
