Add support for signature images in PDF generation
- Introduce `signature-path` configuration for embedding signatures in valuation letters.
- Add reusable method for dynamic image handling in PDFs.
- Update tests to include signature support.
- Include default signature placeholder in branding resources.

--- a/app-bootstrap/src/main/resources/application.yml
+++ b/app-bootstrap/src/main/resources/application.yml
@@ -65,3 +65,4 @@ branding:
     contacts: ${BRANDING_COMPANY_CONTACTS:+254 700 000 000 | info@example.com}
     website: ${BRANDING_COMPANY_WEBSITE:www.example.com}
   logo-path: ${BRANDING_LOGO_PATH:classpath:/branding/isec_logo.jpg}
+  signature-path: ${BRANDING_SIGNATURE_PATH:classpath:/branding/isec_signature.png}
