--- a/app-bootstrap/src/main/resources/application.yml
+++ b/app-bootstrap/src/main/resources/application.yml
@@ -64,5 +64,5 @@ branding:
     address: ${BRANDING_COMPANY_ADDRESS:P.O. Box 12345-00100, Nairobi, Kenya}
     contacts: ${BRANDING_COMPANY_CONTACTS:+254 700 000 000 | info@example.com}
     website: ${BRANDING_COMPANY_WEBSITE:www.example.com}
-  logo-path: ${BRANDING_LOGO_PATH:classpath:/branding/isec_logo.jpg}
+  logo-path: ${BRANDING_LOGO_PATH:classpath:/branding/isec_logo.png}
   signature-path: ${BRANDING_SIGNATURE_PATH:classpath:/branding/isec_signature.png}
