--- a/app-bootstrap/src/main/resources/application.yml
+++ b/app-bootstrap/src/main/resources/application.yml
@@ -66,3 +66,13 @@ branding:
     website: ${BRANDING_COMPANY_WEBSITE:www.example.com}
   logo-path: ${BRANDING_LOGO_PATH:classpath:/branding/isec_logo.png}
   signature-path: ${BRANDING_SIGNATURE_PATH:classpath:/branding/isec_signature.png}
+
+mpesa:
+  consumer-key: ${MPESA_CONSUMER_KEY}
+  consumer-secret: ${MPESA_CONSUMER_SECRET}
+  short-code: ${MPESA_SHORTCODE:174379}
+  passkey: ${MPESA_PASSKEY}
+  callback-url: ${MPESA_CALLBACK_URL}
+  oauth-url: ${MPESA_OAUTH_URL:https://sandbox.safaricom.co.ke/oauth/v1/generate}
+  stk-push-url: ${MPESA_STK_PUSH_URL:https://sandbox.safaricom.co.ke/mpesa/stkpush/v1/processrequest}
+  stk-query-url: ${MPESA_STK_QUERY_URL:https://sandbox.safaricom.co.ke/mpesa/stkpushquery/v1/query}
