Add document verification and security enhancements
- Introduce `VerificationController` with APIs for verifying document status and uploaded PDFs.
- Add `PdfSecurityService` for cryptographic hash generation and PDF metadata extraction.
- Implement `QrCodeService` for embedding QR codes in valuation letters, linking to public verification endpoints.
- Extend security configuration to allow public access to `/verify` endpoints.
- Update `ValuationLetterService` to include document UUIDs, hashes, and verification metadata in records.
- Enhance `PdfGenerationService` to include metadata and verification footer with QR codes.
- Add tests for `VerificationController`, `PdfSecurityService`, and `QrCodeService`.
- Update Postman collection with `/verify` endpoints and usage examples.
- Add database changes for `valuation_letters` schema to include UUID, hash, type, and metadata fields.

--- a/app-bootstrap/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/app-bootstrap/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -17,3 +17,5 @@ databaseChangeLog:
       file: db/changelog/modules/08-policy-updates.yaml
   - include:
       file: db/changelog/modules/09-mpesa-logs.yaml
+  - include:
+      file: db/changelog/modules/10-valuation-letters-security.yaml
