Introduce `DocumentVerificationService` and refactor verification logic
- Add `DocumentVerificationService` for centralized document verification logic.
- Refactor `VerificationController` to delegate verification tasks to `DocumentVerificationService`.
- Introduce `verifyByUuid` and `verifyByPdfContent` methods for UUID and PDF-based verification.
- Update `application.yml` with `valuation-letter` validity configuration.
- Remove redundancy in controller logic, improving maintainability.
- Add unit tests for `DocumentVerificationService` and update `VerificationControllerTest` accordingly.

--- a/app-bootstrap/src/main/resources/application.yml
+++ b/app-bootstrap/src/main/resources/application.yml
@@ -76,3 +76,7 @@ mpesa:
   oauth-url: ${MPESA_OAUTH_URL:https://sandbox.safaricom.co.ke/oauth/v1/generate}
   stk-push-url: ${MPESA_STK_PUSH_URL:https://sandbox.safaricom.co.ke/mpesa/stkpush/v1/processrequest}
   stk-query-url: ${MPESA_STK_QUERY_URL:https://sandbox.safaricom.co.ke/mpesa/stkpushquery/v1/query}
+
+documents:
+  valuation-letter:
+    validity-days: ${VALUATION_LETTER_VALIDITY_DAYS:14}
