Add SMS gateway integration with Africastalking and delivery reporting
- Introduce SMS message entity and schema for tracking SMS messages and results.
- Add `SmsService` and `DeliveryReportService` for sending and tracking SMS notifications.
- Integrate Africastalking API for SMS delivery and mock unit testing.
- Extend `NotificationConsumer` to support SMS channel alongside email.
- Add delivery report handling with JSON and form data support.
- Update security configuration to permit delivery report endpoint access.

--- a/app-bootstrap/src/main/resources/application.yml
+++ b/app-bootstrap/src/main/resources/application.yml
@@ -80,3 +80,9 @@ mpesa:
 documents:
   valuation-letter:
     validity-days: ${VALUATION_LETTER_VALIDITY_DAYS:14}
+
+africastalking:
+  username: ${AFRICASTALKING_USERNAME}
+  api-key: ${AFRICASTALKING_API_KEY}
+  from: ${AFRICASTALKING_FROM}
+  base-url: ${AFRICASTALKING_BASE_URL:https://api.sandbox.africastalking.com}
