--- a/app-bootstrap/src/main/resources/application-prod.yml
+++ b/app-bootstrap/src/main/resources/application-prod.yml
@@ -3,3 +3,6 @@ mpesa:
   oauth-url: ${MPESA_OAUTH_URL:https://api.safaricom.co.ke/oauth/v1/generate}
   stk-push-url: ${MPESA_STK_PUSH_URL:https://api.safaricom.co.ke/mpesa/stkpush/v1/processrequest}
   stk-query-url: ${MPESA_STK_QUERY_URL:https://api.safaricom.co.ke/mpesa/stkpushquery/v1/query}
+
+africastalking:
+  base-url: https://api.africastalking.com/version1/messaging
