Integrate customer management and enhance certificate issuance workflow
- Add `SecurityContextService` for retrieving authenticated user details and JWT claims.
- Integrate customer profile creation/updating in `PaymentService` using `CustomerService`.
- Enhance certificate issuance to include recipient email and phone number in `CertificateRequestedEvent`.
- Refactor `CertificateService`, `ApplicationController`, and `PaymentService` to improve maintainability and data consistency.
- Extend `ProfileController` to include customer details in response.
- Modify database changelogs to support customer module and recipient details.

--- a/app-bootstrap/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/app-bootstrap/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -21,3 +21,5 @@ databaseChangeLog:
       file: db/changelog/modules/10-valuation-letters-security.yaml
   - include:
       file: db/changelog/modules/11-notifications-sms.yaml
+  - include:
+      file: db/changelog/modules/12-customers.yaml
