--- a/modules/applications/pom.xml
+++ b/modules/applications/pom.xml
@@ -33,5 +33,9 @@
             <groupId>com.isec</groupId>
             <artifactId>rating</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.isec</groupId>
+            <artifactId>customers</artifactId>
+        </dependency>
     </dependencies>
 </project>
