--- a/modules/payments/pom.xml
+++ b/modules/payments/pom.xml
@@ -26,5 +26,17 @@
             <groupId>com.isec</groupId>
             <artifactId>certificates</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.isec</groupId>
+            <artifactId>applications</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.isec</groupId>
+            <artifactId>integrations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.isec</groupId>
+            <artifactId>customers</artifactId>
+        </dependency>
     </dependencies>
 </project>
