Add vehicle module with domain, service, controller, repository, and test implementations
- Introduce `VehicleMake` and `VehicleModel` entities with comprehensive domain modeling.
- Implement CRUD operations for vehicle makes and models in `VehicleService`.
- Add `VehicleMakeController` and `VehicleModelController` for API endpoints.
- Create repository interfaces `VehicleMakeRepository` and `VehicleModelRepository` with query methods.
- Incorporate `VehicleMakeRequest`, `VehicleMakeResponse`, `VehicleModelRequest`, and `VehicleModelResponse` DTOs.
- Develop unit tests for `VehicleService` to validate business logic and data integrity.
- Add database changelogs for vehicles schema creation with indices and constraints.
- Extend `pom.xml` to include the vehicles module and dependencies.
- Update postman collection with vehicle-related API examples for makes and models.

--- a/app-bootstrap/pom.xml
+++ b/app-bootstrap/pom.xml
@@ -71,6 +71,10 @@
             <groupId>com.isec</groupId>
             <artifactId>integrations</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.isec</groupId>
+            <artifactId>vehicles</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
