--- a/app-bootstrap/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/app-bootstrap/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -23,3 +23,5 @@ databaseChangeLog:
       file: db/changelog/modules/11-notifications-sms.yaml
   - include:
       file: db/changelog/modules/12-customers.yaml
+  - include:
+      file: db/changelog/modules/13-vehicles.yaml
