Add vehicle makes and models seed data to database changelogs
- Introduce seed entries for `VehicleMake` and `VehicleModel` entities across multiple regions and manufacturers (e.g., Europe, USA, Japan, Korea, China).
- Ensure preconditions in changelogs to avoid duplicate insertion during migration.
- Include comprehensive details such as body type, fuel type, and active status for vehicle models.

--- a/app-bootstrap/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/app-bootstrap/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -25,3 +25,5 @@ databaseChangeLog:
       file: db/changelog/modules/12-customers.yaml
   - include:
       file: db/changelog/modules/13-vehicles.yaml
+  - include:
+      file: db/changelog/modules/14-vehicles-seed.yaml
